--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,11 @@
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api/$1" }
   ],
+  "functions": {
+    "api/**/*.js": {
+      "memory": 1024
+    }
+  },
   "headers": [
     {
       "source": "/(.*)",
