fix(vercel): update function pattern to TS

--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     { "source": "/api/(.*)", "destination": "/api/$1" }
   ],
   "functions": {
-    "api/**/*.js": {
+    "api/**/*.ts": {
       "memory": 1024
     }
   },
