--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "build:client": "vite build",
     "build:server": "esbuild server/index.ts --platform=node --bundle --format=esm --outfile=server/index.js",
-    "vercel-build": "npm run build:server && npm run build:client",
+    "vercel-build": "npm run build:client",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
