style(blog): add background, container, card styles, and optional animated gradient

--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,4 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "api/handler.ts",
-      "use": "@vercel/node",
-      "config": { "includeFiles": ["server/index.js"] }
-    },
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "dist/public" }
-    }
-  ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/api/handler.ts" },
-    { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/index.html" }
-  ]
+  "buildCommand": "npm run build",
+  "framework": "nextjs"
 } 
